Feat/invoice (#34)
* feat(interfaces): add invoice interface

* feat(dto): add invoice create and update dto

* feat(model) update ivoice model and add `InvoiceItem` model

* feat(invoice): add invoice package with repository, service, and handler layers

* feat(apperrors): add invoice error messages

* feat(routes): add invoice routes and register them in main router

* feat(routes): rename customer routes function to `registerCustomerRoutes`

* feat(docs): add swagger docs for apis

* feat(model): document invoice status values and add `pro_forma` status

* feat(model): update invoice, invoiceitem and orderitem model

- add customer email, phone, name and address fields to invoice model
- add SKU field to invoiceitem  and orderitem model

Those field are added so we can render them in invoice pdf

* feat(db): add InvoiceItem model to got AutoMigrate method

* feat(mailer): add mailer package and integrate with app context

- Introduced a mailer package for sending emails
- Wired the mailer into the application context for global access

* feat(pdfutil): add pdfutil package for generating invoice PDFs using go-wkhtmltopdf package

- Generate invoices from HTML templates
- Include initial invoice template

* feat(dto): update invoice and order DTOs

- Populate customer fields in invoice DTO
- Use order discount total instead of applied discount in invoice DTO
- Include SKU in order item

* feat(interfaces): add Issue method to invoice handler and service

* feat(invoice): add service to issue invoices and send emails

- Marks invoice status as issued
- Generates invoice PDF
- Sends invoice email to customer

* feat(invoice): add handler, routes, and error messages for Issue

* feat(routes): pass appCtx to invoice service in main routes

* feat(swagger): add swagger doc for  issue invoice api

* feat(docker): add Docker step to install wkhtmltopdf

Add a Docker build step to install `wkhtmltopdf` in the server image.
This ensures the `pdfutil` package can reliably co
